# TANUH-DPI

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  CONCURRENCY.md  GCP_DEPLOYMENT.md  README.md  README_ClinicalDocument.md  README_ForgeryDetection.md  README_InsurancePolicy.md  concurrency_test.py  docker-compose.prod.yml  docker-compose.yml  docker-starter.sh
.claude/: settings.json
common/: celery_app.py  classifier.py  config.py  llm_inference_service.py  metrics.py  (+2 more)
nhcx-local/: README.md  build_appimage.sh  build_executable.sh  pyproject.toml  setup.cfg
nhcx-local/appimage/: AppRun  nhcx-extract.desktop
nhcx-local/src/nhcx_local/: __init__.py  classifier.py  cli.py  fhir_utils.py  llm.py  ocr.py
nhcx-local/src/nhcx_local/ocr_engines/: docling_engine.py  normaliser.py  pypdf_engine.py
nhcx-local/src/nhcx_local/pipelines/: abdm.py  nhcx.py
nhcx-local/src/nhcx_local/rulebooks/abdm/: StructureDefinition-AllergyIntolerance_updated.json  StructureDefinition-Appointment_updated.json  StructureDefinition-CarePlan_updated.json  StructureDefinition-DiagnosticReportImaging_updated.json  StructureDefinition-DocumentBundle_updated.json  StructureDefinition-Encounter_updated.json  StructureDefinition-FamilyMemberHistory_updated.json  StructureDefinition-Invoice_updated.json  StructureDefinition-MedicationRequest_updated.json  StructureDefinition-Medication_updated.json  StructureDefinition-ObservationGeneralAssessment_updated.json  StructureDefinition-ObservationPhysicalActivity_updated.json  StructureDefinition-ObservationWomenHealth_updated.json  StructureDefinition-Observation_updated.json  StructureDefinition-Practitioner_updated.json  StructureDefinition-Specimen_updated.json
nhcx-local/src/nhcx_local/rulebooks/nhcx/: StructureDefinition-Binary_updated.json  StructureDefinition-Claim_updated.json  StructureDefinition-CommunicationRequest_updated.json  StructureDefinition-Coverage_updated.json  StructureDefinition-DocumentReference_updated.json  StructureDefinition-Task_updated.json
(+200 files in other folders)
