[metadata]
name = nhcx-local
version = 1.0.0
description = Local CLI tool for extracting FHIR bundles from clinical and insurance PDFs using a local LLM (Ollama)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = NHCX Team
keywords = fhir, abdm, nhcx, healthcare, pdf, ollama

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    click>=8.0
    langchain-core>=0.3
    langchain-ollama>=0.3
    langgraph>=0.2
    docling>=2.0,<3
    pypdf>=4.0
    pymupdf4llm>=0.0.10
    pymupdf>=1.24
    rich>=13.0

[options.packages.find]
where = src
include = nhcx_local*

[options.package_data]
nhcx_local = rulebooks/**/*.json

[options.extras_require]
gpu =
    torch>=2.0
    transformers>=4.40
    accelerate>=0.30

[options.entry_points]
console_scripts =
    nhcx-extract = nhcx_local.cli:main
